@@ -1,3 +1,10 @@
+2012-10-26  Kai Tietz  <ktietz@redhat.com>
+
+	* string.h (strechr): Replace assembler by
+	C code.
+	(ascii_strcasematch): Likewise.
+	(ascii_strncasematch): Likwise.
+
 2012-10-26  Corinna Vinschen  <corinna@vinschen.de>
 
 	* dir.cc (closedir): Fix syscall_printf.
